# dorothy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODO.md  foo  justfile  mkdocs.yml  pyproject.toml  todo.md
CONFIG/builtin/: filesystem-provider.toml  filesystem.toml  foo.toml  playbin-listener.toml  playbin.toml  rest-controller.toml  rest.toml
CONFIG/filesystem/: filesystem-provider.toml
CONFIG/playbin/: playbin-listener.toml
docs/: index.md
requirements/: requirements-check.txt  requirements-dev.txt  requirements.txt
src/dorothy/: __init__.py  __main__.py  _args.py  _channel.py  _config.py  _deserializers.py  _logging.py  _mainloop.py  _orchestrator.py  _plugin_handler.py  args.py  channel.py  config.py  daemon.py  deserializers.py  exceptions.py  extensions.py  logging.py  mainloop.py  models.py  nodes.py  orchestrator.py  plugin_handler.py  tui.py
src/dorothy/ext/filesystem/: __init__.py  providers.py
src/dorothy/ext/http/: __init__.py  controllers.py
src/dorothy/ext/playbin/: __init__.py  listeners.py
src/dorothy/ext/providers/filesystem/: __init__.py  providers.py
src/dorothy/ext/socket/: __init__.py  controllers.py
src/dorothy/models/: _album.py  _artist.py  _controller.py  _listener.py  _node.py  _plugin_manifest.py  _provider.py  _resource_id.py  _song.py
src/dorothy/plugins/builtin/: __init__.py  controllers.py  exceptions.py  listeners.py  providers.py
src/lilim/: __main__.py  player_states.py  tui.py
src/lilim/states/: album_list.py  queue.py  select_channel.py  song_list.py  state.py
