[tool.poetry]
name = "dorothy"
version = "0.1.0"
description = ""
authors = ["Kutu <git@dobon.dev>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
dorothy = 'dorothy.__main__:app'
tui = 'dorothy.tui:tui'

[tool.poetry.dependencies]
python = "^3.11.0"
colorama = "^0.4.6"
pygobject = "^3.46.0"
toml = "^0.10.2"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
platformdirs = "^4.1.0"
typer = {extras = ["all"], version = "^0.9.0"}
setproctitle = "^1.3.3"
psutil = "^5.9.8"
aiohttp-apispec = "^2.2.3"
tinytag = "^1.10.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"
types-colorama = "^0.4.15.20240106"
types-toml = "^0.10.8.7"
pygobject-stubs = "^2.10.0"
types-psutil = "^5.9.5.20240106"

[tool.mypy]
strict = true

[tool.ruff]
select = ["E", "F", "I"]

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
