[project]
name = "dorothy"
description = "A minimalistic music player based on the use of plugins to customize it to your needs."
requires-python = ">=3.11.0"

dependencies = [
  "colorama>=0.4.6",
  "pygobject>=3.46.0",
  "toml>=0.10.2",
  "aiohttp>=3.9.1",
  "platformdirs>=4.1.0",
  "aiohttp-apispec>=2.2.3",
  "tinytag>=1.10.1",
  "requests>=2.31.0",
  "typing-extensions>=4.10.0",
]

version = "0.1.0"
readme = "README.md"

authors = [
  {name = 'Jorge "Kutu" Dobón Blanco', email="code@dobon.dev"}
]

[project.scripts]
dorothy = 'dorothy.__main__:main'
lilim = 'lilim.__main__:main'

[project.optional-dependencies]
dev = [
  "pip-tools>=7.4.1",
]

check = [
  "ruff>=0.1.2",
  "mypy>=1.8.0",
  "types-colorama>=0.4.15.20240106",
  "pygobject-stubs>=2.10.0",
  "types-toml>=0.10.8.20240310",
  "types-requests>=2.32.0.20240602"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = true
disallow_untyped_decorators = false

[tool.ruff]
select = ["E", "F", "I"]

[tool.ruff.format]
docstring-code-format = true
